--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,25 @@
+# TDLib файлы
+.tdlib/
+tdlib-db/
+tdlib-files/
+
+# Go
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+telegram-client
+
+# IDE
 .idea/
-*.iws
-*.iml
-*.ipr
+.vscode/
+*.swp
+*.swo
+*~
+
+# Environment
+.env
+.env.local
